@@ -9,6 +9,7 @@ Version 3.0.6
     - Bugfix: count() parameter must be an array for php 7.2
     - Bugfix: [action] Caching legacy export data
     - Bugfix: Correction on the number of products per page in the pagination
+    - Bugfix: Update of the lengow_order table directly after the creation of the PrestaShop order
 
 =============================================================
 Version 3.0.5
